single view beer stretch fixed

--- a/sass/layout/_singleview.scss
+++ b/sass/layout/_singleview.scss
@@ -27,6 +27,7 @@
 .sv_beer_image {
   max-width: 100%;
   height: 50vh;
+  width: auto;
 }
 
 .beer_information {
